@@ -26,8 +26,6 @@ HEADER = r'''%% Generated by Sphinx.
 \documentclass[%(papersize)s,%(pointsize)s]{%(docclass)s}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
-\usepackage[colorlinks,breaklinks]{hyperref}
-\usepackage{tabularx}
 \title{%(title)s}
 \date{%(date)s}
 \release{%(release)s}
@@ -788,7 +786,6 @@ class LaTeXTranslator(nodes.NodeVisitor):
         self.body.append('] ')
 
     def visit_option_list(self, node):
-        self.body.append('% [option list]\n')
         self.body.append('\\begin{optionlist}{3cm}\n')
     def depart_option_list(self, node):
         self.body.append('\\end{optionlist}\n')
@@ -826,11 +823,13 @@ class LaTeXTranslator(nodes.NodeVisitor):
         (u"]", ur"{]}"),
         (u"¶", ur"\P{}"),
         (u"§", ur"\S{}"),
-        (u"∞", ur"$\infinity$"),
+        (u"∞", ur"$\infty$"),
         (u"±", ur"$\pm$"),
         (u"‣", ur"$\rightarrow$"),
         (u"Ω", ur"$\Omega$"),
         (u"Ω", ur"$\Omega$"),
+        (u"φ", ur"$\phi$"),
+        (u"π", ur"$\pi$"),
         (u"~", ur"\textasciitilde{}"),
         (u"€", ur"\texteuro{}"),
         (u"<", ur"\textless{}"),
